--- a/css/resort.css
+++ b/css/resort.css
@@ -1,3 +1,14 @@
 h1{
     text-align: center;
+    font-family: sans-serif;
+    font-style: italic;
+}
+
+ul{
+    font-family: sans-serif;
+    font-style: italic;
+}
+
+body{
+    background-color: burlywood;
 }
