--- a/css/travel.css
+++ b/css/travel.css
@@ -1,3 +1,14 @@
 body{
     background-color: blue;
 }
+
+h1{
+    text-align: center;
+    font-family: sans-serif;
+    font-style: italic;
+}
+
+ul{
+    font-family: sans-serif;
+    font-style: italic;
+}
